--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "auth-ms"]
 	path = auth-ms
 	url = https://github.com/katarro/auth-ms.git
+[submodule "gateway"]
+	path = gateway
+	url = https://github.com/katarro/gateway
