--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "gateway"]
 	path = gateway
 	url = https://github.com/katarro/gateway
+[submodule "test-ms-1"]
+	path = test-ms-1
+	url = https://github.com/katarro/test-ms-1
