--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,36 @@
-
 services:
   nats-server:
     image: nats:latest
+    container_name: nats-server
     ports:
       - "4222:4222"
       - "8222:8222"
-    
-  db_freeq:
+    restart: unless-stopped
+
+  auth_db:
     image: postgres:latest
+    container_name: auth_db
     environment:
-      POSTGRES_USER: fcastro
-      POSTGRES_PASSWORD: freeq123
-      POSTGRES_DB: freeq_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB_AUTH}
     ports:
       - "5432:5432"
     volumes:
-      - ./db_freeq:/var/lib/postgresql/data
+      - ./auth_db:/var/lib/postgresql/data
+    # restart: unless-stopped
+
+  branch_db:
+    image: postgres:latest
+    container_name: branch_db
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB_BRANCH}
+    ports:
+      - "5433:5432"
+    volumes:
+      - ./branch_db:/var/lib/postgresql/data
+    # restart: unless-stopped
+ 
+  
