feat: seañadieron variables de entorno

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,9 @@
-CLIENT_GATEWAY_PORT=3000
-POSTGRES_USER='fcastro'
-POSTGRES_DB_AUTH='auth_db'
-POSTGRES_DB_BRANCH='branch_db'
-POSTGRES_PASSWORD='freeq123'
+CLIENT_GATEWAY_PORT=
+POSTGRES_USER=
+POSTGRES_DB_AUTH=
+POSTGRES_DB_BRANCH=
+POSTGRES_PASSWORD=
 
-POSTGRES_HOST='localhost'
+POSTGRES_HOST=
 
 DATABASE_URL="postgresql://<user>:<password>@<host>:5432/<name_db>?schema=public"
