Add correct submodule: katarro/queue-time-ms

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "test-ms-2"]
 	path = test-ms-2
 	url = https://github.com/katarro/test-ms-2
+[submodule "queue-time-ms"]
+	path = queue-time-ms
+	url = https://github.com/katarro/queue-time-ms.git
